client profil + customization